<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.sfragata</groupId>
	<artifactId>JarContent</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>JarContent</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>5.3.31</spring.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
		<webstart-maven-plugin.version>1.0-beta-6</webstart-maven-plugin.version>
		<junit.version>4.13.2</junit.version>
		<log4j.version>2.17.1</log4j.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<keytool-api-1.7.version>1.4</keytool-api-1.7.version>
		<java.version>21</java.version>
		<swixml-version>1.5.144</swixml-version>
		<slf4j-version>1.7.29</slf4j-version>
		<jdom.version>1.1</jdom.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
					</compilerArgs>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>${appassembler-maven-plugin.version}</version>
				<configuration>
					<programs>
						<program>
							<mainClass>com.github.sfragata.jarcontent.gui.JarContentLauncher</mainClass>
							<id>jarcontent</id>
						</program>
					</programs>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>webstart-maven-plugin</artifactId>
				<version>${webstart-maven-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>webstart-pack200-impl</artifactId>
						<version>${webstart-maven-plugin.version}</version>
					</dependency>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>keytool-api-1.7</artifactId>
						<version>${keytool-api-1.7.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<jnlp>
						<inputTemplate>template.vm</inputTemplate>
						<mainClass>com.github.sfragata.jarcontent.gui.JarContentLauncher</mainClass>
					</jnlp>
					<sign>
						<keystore>${project.basedir}/src/key/jarContent.jks</keystore>
						<keypass>keypass</keypass>
						<storepass>storepass</storepass>
						<storetype>jks</storetype>
						<alias>sendmail</alias>
						<verify>true</verify>
					</sign>
					<verbose>true</verbose>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.swixml</groupId>
			<artifactId>swixml</artifactId>
			<version>${swixml-version}</version>
			<exclusions>
				<exclusion>
					<artifactId>ant</artifactId>
					<groupId>ant</groupId>
				</exclusion>
				<exclusion>
					<artifactId>j2h</artifactId>
					<groupId>java2html</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>${jdom.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
		</dependency>

	</dependencies>
</project>
